# Sudoku_X_alg

./: CMakeLists.txt  README.md
src/: Array2D.cpp  Array2D.h  Game.cpp  Game.h  Matrix.cpp  Matrix.h  Sudoku.cpp  Sudoku.h  main.cpp
